--- a/campaign_management/templates/campaign_header.html
+++ b/campaign_management/templates/campaign_header.html
@@ -16,19 +16,25 @@
   <div class='container'>
     <div class='row'>
       <div class='col-lg-12'>
-        <h3>
-          <a href='{% url 'campaign-list' %}'>{% trans "Emails" %}</a>
+        <ol class='breadcrumb'>
+          <li>
+            <a href='{% url 'campaign-list' %}'>{% trans "Emails" %}</a>
+          </li>
           {% if campaign %}
-          / <a href='{% url 'campaign-detail' campaign.id %}'>{{campaign.email_subject}}</a>
-          / Edit
+            <li>
+              <a href='{% url 'campaign-detail' campaign.id %}'>{{campaign.email_subject}}</a>
+            </li>
+            <li class='active'>
+              {% trans "Edit" %}
+            </li>
           {% else %}
-          / {% trans "New email" %}
-          {% endif %}
-        </h3>
+            <li >
+              {% trans "New email" %}
+            </li>
+            {% endif %}
+        </ol>
       </div>
     </div>
-
-    <hr />
 
     <div class='row'>
       <form method='post'>
@@ -37,6 +43,7 @@
           {% csrf_token %}
 
           <h3>Email Header</h3>
+
           <div class="form-group">
             <label for="{{form.email_from_name.auto_id}}" class='control-label'>From name:</label>
             <input id="{{form.email_from_name.auto_id}}"
@@ -45,9 +52,15 @@
                    tabindex='3'
                    maxlength='{{form.email_from_name.field.max_length}}'
                    value='{{form.email_from_name.value|default:user.first_name}}'
-                   required />
-            <div class='help-block'>The name your recipients will see in the <code>From:</code> field.</div>
+                   />
+            <small class='text-danger'><strong>
+              {% for error in form.email_from_name.errors %}
+                {{ error }}
+              {% endfor %}
+            </strong></small>
+            <small class='help-block'>The name your recipients will see in the <code>From:</code> field.</small>
           </div>
+
           <div class="form-group">
             <label for="{{form.email_from_email.auto_id}}" class='control-label'>From email:</label>
             <input type='email'
@@ -57,9 +70,15 @@
                    tabindex='3'
                    maxlength='{{form.email_from_email.field.max_length}}'
                    value='{{form.email_from_email.value|default:user.email}}'
-                   required />
-            <div class='help-block'>The email address your recipients will see in the <code>From:</code> field.</div>
+                   />
+            <small class='text-danger'><strong>
+              {% for error in form.email_from_email.errors %}
+                {{ error }}
+              {% endfor %}
+            </strong></small>
+            <small class='help-block'>The email address your recipients will see in the <code>From:</code> field.</small>
           </div>
+
           <div class="form-group">
             <label for="{{form.email_reply_to_email.auto_id}}" class='control-label'>Reply To email:</label>
             <input type='email'
@@ -69,36 +88,58 @@
                    tabindex='3'
                    maxlength='{{form.email_reply_to_email.field.max_length}}'
                    value='{{form.email_reply_to_email.value|default:user.email}}'
-                   required />
-            <div class='help-block'>The email address where your subscribers can reply to.</div>
+                   />
+            <small class='text-danger'><strong>
+              {% for error in form.email_reply_to_email.errors %}
+                {{ error }}
+              {% endfor %}
+            </strong></small>
+            <small class='help-block'>The email address your subscribers can reply to.</small>
           </div>
+
           <div class="form-group">
             <label for="{{form.email_subject.auto_id}}" class='control-label'>Email subject:</label>
             <input id="{{form.email_subject.auto_id}}"
                    name="{{form.email_subject.name}}" class='form-control' tabindex='2'
                    maxlength='{{form.email_subject.field.max_length}}'
-                   placeholder='Issue #1: About this newsletter'
+                   placeholder='E.g: Issue #1: About this newsletter'
                    value='{{form.email_subject.value|default:""}}'/>
-            <div class='help-block'>Max 150 characters. You can you emojis too.</div>
+            <small class='text-danger'><strong>
+              {% for error in form.email_subject.errors %}
+                {{ error }}
+              {% endfor %}
+            </strong></small>
+            <small class='help-block'>Max 150 characters. You can you emojis too.</small>
           </div>
+
           <div class="form-group">
             <label for="{{form.email_list.auto_id}}">To recipients:</label>
-          {% if not lists %}
-            <textarea id='{{form.email_list.auto_id}}' class='form-control'
-              rows='3' placeholder='john@doe.com, John Doe
-  janet@gmail.com, Janet Dupont'></textarea>
-            <div class='help-block'>Max 100 subscribers, one subscriber per
-              line.<br /><a href="{% url 'subscriber-management-create' %}">Create a new list for more subscribers</a>.</div>
-          {% else %}
-              <select id="{{form.email_list.auto_id}}" name="{{form.email_list.name}}" class="form-control">
-              {% for list in lists %}
-              <option value='{{list.id}}' {% if list.id == campaign.email_list.id %}selected{%endif %}>
-                {{list.name}} &mdash; {{list.count_validated_subscribers}} {% trans 'subscriber' %}{{list.count_validated_subscribers|pluralize}}
-              </option>
-              {% endfor %}
-              </select>
-            <div class='help-block'>Or <a href="{% url 'subscriber-management-create' %}"> create a new list</a>.</div>
-          {% endif %}
+            {% if not lists %}
+              <p class='alert alert-warning'>
+                You don’t have any subscriber list yet.
+                <a href='{% url 'subscriber-management-create' %}'>Click here to create your first list &raquo;</a>
+              </p>
+<!--               <textarea id='{{form.email_list.auto_id}}' class='form-control' -->
+<!--                         rows='3' placeholder='john@doe.com, John Doe -->
+<!-- janet@gmail.com, Janet Dupont'></textarea> -->
+<!--               <small class='text-danger'><strong> -->
+<!--                 {% for error in form.email_list.errors %} -->
+<!--                   {{ error }} -->
+<!--                 {% endfor %} -->
+<!--               </strong></small> -->
+<!--               <small class='help-block'> -->
+<!--                 Max 100 subscribers, one subscriber per line. <a href="{% url 'subscriber-management-create' %}">Create a list for more subscribers</a>. -->
+<!--               </small> -->
+            {% else %}
+                <select id="{{form.email_list.auto_id}}" name="{{form.email_list.name}}" class="form-control">
+                {% for list in lists %}
+                <option value='{{list.id}}' {% if list.id == campaign.email_list.id %}selected{%endif %}>
+                  {{list.name}} &mdash; {{list.count_validated_subscribers}} {% trans 'subscriber' %}{{list.count_validated_subscribers|pluralize}}
+                </option>
+                {% endfor %}
+                </select>
+              <div class='help-block'>Or <a href="{% url 'subscriber-management-create' %}"> create a new list</a>.</div>
+            {% endif %}
           </div>
 
         </div>
@@ -106,7 +147,9 @@
         <div class='row'>
           <div class='col-lg-6 col-lg-offset-3'>
             <hr />
-            <button class='btn btn-success pull-right'>Next: <strong>Compose Email</strong> &raquo;</button>
+            <button class='btn btn-success pull-right' {% if not lists %}disabled{% endif %}>
+              Next: <strong>Compose Email</strong> &raquo;
+            </button>
           </div>
         </div>
 
