--- a/campaign_management/templates/campaign_review.html
+++ b/campaign_management/templates/campaign_review.html
@@ -1,4 +1,5 @@
 {% extends 'master.html' %}
+{% load staticfiles %}
 {% load i18n %}
 {% load humanize %}
 
@@ -14,10 +15,16 @@
 
   <div class='row'>
     <div class='col-lg-12'>
-      <h3>
-        <a href='{% url 'campaign-list' %}'>{% trans "Emails" %}</a>
-        / <a href='{% url 'campaign-detail' campaign.id %}'>{{campaign.email_subject}}</a>
-        / {% trans 'Email review' %}
+        <ol class='breadcrumb'>
+          <li>
+            <a href='{% url 'campaign-list' %}'>{% trans "Emails" %}</a>
+          </li>
+          <li>
+            <a href='{% url 'campaign-detail' campaign.id %}'>
+              {{campaign.email_subject}}
+            </a>
+          </li>
+          <li class='active'>{% trans 'Email review' %}</li>
       </h3>
     </div>
   </div>
@@ -53,10 +60,15 @@
           </li>
           <li class="list-group-item text-center">
             <strong>HTML email</strong>
-            <a href='{% url "campaign-compose-email" campaign.id %}'><small>edit</small></a>
-            <div class='preview' style='position: relative; min-height: 600px; height:auto; background: #f9f9f9; overflow: hidden;margin-top:2rem'>
-              <iframe style='border: 0; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 10; transform: scale(0.90); transform-origin: 0 0; height: 112%; width: 112%;'
-                src='{% url "campaign-email-preview" campaign.id %}'> </iframe>
+            <small>
+              <a href='{% url "campaign-compose-email" campaign.id %}'>edit</a>
+              &middot;
+              <a href='{% url "campaign-email-preview" campaign.id %}' target='_blank'>
+                view email <i class='glyphicon glyphicon-new-window' style='font-size:10px'></i>
+              </a>
+            </small>
+            <div class='preview' style='position: relative; min-height: 600px; height:auto; overflow: hidden;margin-top:2rem;box-shadow: 0 1px 1px #969696; border-top: 1px solid #eaeaea;margin-bottom:2rem'>
+              <iframe style='border: 0; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 10; transform: scale(0.90); transform-origin: 0 0; height: 112%; width: 112%;'  src='{% url "campaign-email-preview" campaign.id %}'> </iframe>
               <div class='cover' style='position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 100;'></div>
             </div>
           </li>
@@ -69,7 +81,9 @@
   <div class='row'>
     <div class='col-lg-2 col-lg-offset-2 col-sm-12'>
 
-      <a href="{% url 'campaign-list' %}" class='btn btn-default'>Save and exit</a>
+      {% if campaign.email_list.count_validated_subscribers %}
+        <a href="{% url 'campaign-list' %}" class='btn btn-default'>Save and exit</a>
+      {% endif %}
 
     </div>
 
@@ -98,14 +112,26 @@
 
       <hr />
 
-      <a href='javascript:void(0)' class='btn btn-primary' disabled>
-        {% trans 'Schedule'%}
-      </a>
+<!--       <a href='javascript:void(0)' class='btn btn-primary' disabled> -->
+<!--         {% trans 'Schedule'%} -->
+<!--       </a> -->
 
-      <a href='{% url "campaign-send-campaign" campaign.pk %}' class='btn btn-danger'>
-        {% trans 'Send now to'%}
-        {{ campaign.email_list.count_validated_subscribers|intcomma }} {% trans 'subscriber' %}{{campaign.email_list.count_validated_subscribers|pluralize}}
-      </a>
+      <form action='{% url "campaign-send-campaign" campaign.pk %}' method='get' style='display:inline-block'>
+        {% if not campaign.email_list.count_validated_subscribers %}
+          <p class='alert alert-warning text-left'>
+          Your list <a href="{% url 'subscriber-management-list-subscribers' campaign.email_list.uuid %}" target='_blank'>{{ campaign.email_list.name }}</a> does not have any subscriber
+            yet.
+            <br />
+            You need at least 1 subscriber to send this email.
+          </p>
+          <a href="{% url 'campaign-list' %}" class='btn btn-default'>Save and send later</a>
+        {% else %}
+        <button class='btn btn-danger'>
+            {% trans 'Send now to'%}
+            {{ campaign.email_list.count_validated_subscribers|intcomma }} {% trans 'subscriber' %}{{campaign.email_list.count_validated_subscribers|pluralize}}
+          </button>
+        {% endif %}
+      </form>
 
     </div>
   </div>
