Inline CSS and generate text version.

--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -22,7 +22,8 @@
         <li><a href="/me"></a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            <img src="//placehold.it/50x50" data-email="{{user.email}}"
+            <img src="//placehold.it/30x30" data-email="{{user.email}}"
+                 width='30' height='30'
                  id="gravatar_picture" class="img-circle special-img"
                  style="float:left; margin-right: 5px; margin-top:-5px" />
             {{ user.username }}
