--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -39,7 +39,7 @@
       </ul>
     {% else %}
       <div class="nav navbar-nav pull-right" style="margin-right:15px">
-        <a class='btn btn-default navbar-btn' href="/accounts/login">{% trans "Log In" %}</a>
+        <a class='btn btn-default navbar-btn' href="{% url 'user_login' %}">{% trans "Log In" %}</a>
       </div>
     {% endif %}
 
