--- a/user_management/templates/user_management/user_login.html
+++ b/user_management/templates/user_management/user_login.html
@@ -7,19 +7,19 @@
         {% csrf_token %}
         <div class="form-group {% if form.email.errors %}has-error{% endif %}">
           <label for="{{form.email.auto_id}}" class="control-label">{{form.email.label}}</label>
-          <input id="{{form.email.auto_id}}" name="{{form.email.name}}" class='form-control input-lg' autofocus tabindex='0' value ="{{form.email.value | default_if_none:""}}"/>
+          <input id="{{form.email.auto_id}}" name="{{form.email.name}}" class='form-control input-lg' autofocus tabindex=1 value ="{{form.email.value | default_if_none:""}}"/>
           {% for error in form.email.errors %}
             <span class="error-block">{{error}}</span>
           {% endfor %}
         </div>
         <div class="form-group {% if form.password.errors %}has-error{% endif %}">
           <label for="{{form.password.auto_id}}" class="control-label">{{form.password.label}}</label>
-          <input type="password" id="{{form.password.auto_id}}" name="{{form.password.name}}" class='form-control input-lg' autofocus tabindex='1'/>
+          <input type="password" id="{{form.password.auto_id}}" name="{{form.password.name}}" class='form-control input-lg' tabindex=2/>
           {% for error in form.password.errors %}
             <span class="error-block">{{error}}</span>
           {% endfor %}
         </div>
-        <button class="btn btn-primary">{% trans 'Login' %}</button>
+        <button class="btn btn-primary" tabindex=3>{% trans 'Login' %}</button>
         <a class="btn btn-default pull-right" href="{% url 'user_register' %}">{% trans 'Register' %}</a>
     </form>
 </div>
