--- a/subscriber_management/templates/list_settings.html
+++ b/subscriber_management/templates/list_settings.html
@@ -22,22 +22,24 @@
         <br>
         <form method="POST" class="">
             {% csrf_token %}
-          <div class="form-group">
-              <div class="form-group {% if form_object.email.errors %}has-error{% endif %}">
-                <label for="{{form_object.name.auto_id}}" class="control-label">{% trans 'Rename this list' %}</label>
-                <input id="{{form_object.name.auto_id}}" name="{{form_object.name.name}}" class='form-control input-lg' autofocus tabindex='0' value ="{{form_object.name.value | default_if_none:""}}" required/>
-                {% for error in form_object.name.errors %}
-                  <span class="error-block">{{error}}</span>
-                {% endfor %}
-              </div>
-              <div class="form-group">
-                <label for="" class="control-label">{% trans 'From email' %}</label>
-                <p>{{list_item.from_email}}</p>
-              </div>
-            <div class='help-block'>This name is only visible to you. Go to your <a href='{% url 'subscriber-management-list-newsletter-homepage' list_item.uuid  %}'>newsletter homepage</a> for more.</div>
-          </div>
+            <div class="form-group {% if form_object.email.errors %}has-error{% endif %}">
+              <label for="{{form_object.name.auto_id}}" class="control-label">{% trans 'Rename this list' %}</label>
+              <input id="{{form_object.name.auto_id}}" name="{{form_object.name.name}}" class='form-control' tabindex='0' value ="{{form_object.name.value | default_if_none:""}}" required/>
+              {% for error in form_object.name.errors %}
+                <span class="error-block">{{error}}</span>
+              {% endfor %}
+              <small class='help-block'>
+                This name is only visible to you. Go to your <a href='{% url 'subscriber-management-list-newsletter-homepage' list_item.uuid  %}'>newsletter homepage</a> for public settings.
+              </small>
+            </div>
           <button type="submit" class="btn btn-default">{% trans 'Update' %}</button>
         </form>
+        <hr>
+          <div class="form-group">
+            <label for="" class="control-label">{% trans 'From email' %}</label>
+            <p>{{list_item.from_email|default:"No email configured yet."}}</p>
+            <small class='help-block'>The email address your recipients will see in the <code>From:</code> field.</small>
+          </div>
         {% for error in form_object.name.errors %}
           <span class="error-block text-danger">{{error}}</span>
         {% endfor %}
