--- a/templates/index.html
+++ b/templates/index.html
@@ -9,20 +9,20 @@
 {% block content %}
 
   <div class="container">
-    <div class="col-lg-12">
+    <div class="col-lg-6 col-lg-offset-3">
+      <br />
+      <br />
       <p class='lead'>
         Welcome to Minimail!
       </p>
-      <ol>
+      <strong>Get started in 2 steps:</strong>
+      <ol class='list-unstyled'>
         <li>
-          Start by <a href='{% url "subscriber-management-create" %}'>creating a
+          1. Start by <a href='{% url "subscriber-management-create" %}'>creating a
           list</a>. A list is where you keep your newsletter&rsquo;s subscribers.
         </li>
         <li>
-          Then paste your HTML or text email in a <a href='{% url "template-new" %}'>new template</a>.
-        </li>
-        <li>
-          You&rsquo;re now ready to send your subscribers <a href='{% url "campaign-new" %}'>a first email</a>! 👏
+          2. You&rsquo;re now ready to send your subscribers <a href='{% url "campaign-new" %}'>a first email</a>! 👏
         </li>
 
       </ol>
