Fix menu and login/register pages layout.

--- a/user_management/templates/user_management/user_update.html
+++ b/user_management/templates/user_management/user_update.html
@@ -6,23 +6,27 @@
 
 
 {% block content %}
-<form method="post">
-  <legend>Account</legend>
-  {% csrf_token %}
-  {% for input in form_user %}
-  <div class="form-group">
-    <label for="email">{{input.label}}</label>
-    {{input}}
 
+  <div class='row'>
+    <div class='col-lg-6 col-lg-offset-3'>
+      <form method="post">
+        <legend>Account</legend>
+        {% csrf_token %}
+        {% for input in form_user %}
+        <div class="form-group">
+          <label for="email">{{input.label}}</label>
+          {{input}}
+        </div>
+        {% endfor %}
+        {% for input in form_user_extend %}
+        <div class="form-group">
+          <label for="email">{{input.label}}</label>
+          {{input}}
+        </div>
+        {% endfor %}
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+    </div>
   </div>
-  {% endfor %}
-  {% for input in form_user_extend %}
-  <div class="form-group">
-    <label for="email">{{input.label}}</label>
-    {{input}}
-  </div>
-  {% endfor %}
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
 
 {% endblock %}
