--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -31,7 +31,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a href="{% url 'user_account' %}">{% trans "Account" %}</a></li>
-            <li><a href="#">{% trans "Settings" %}</a></li>
+<!--             <li><a href="#">{% trans "Settings" %}</a></li> -->
             <li role="separator" class="divider"></li>
             <li><a href="/accounts/logout">{% trans "Log Out" %}</a></li>
           </ul>
@@ -40,6 +40,7 @@
     {% else %}
       <div class="nav navbar-nav pull-right" style="margin-right:15px">
         <a class='btn btn-default navbar-btn' href="{% url 'user_login' %}">{% trans "Log In" %}</a>
+        <a class='btn btn-link navbar-btn' href="{% url 'user_register' %}">{% trans "Register" %}</a>
       </div>
     {% endif %}
 
