--- a/user_management/templates/user_management/user_register.html
+++ b/user_management/templates/user_management/user_register.html
@@ -3,31 +3,44 @@
 
 {% block content %}
 <div class='container'>
-    <form method="POST">
-        {% csrf_token %}
-        <div class="form-group {% if form.email.errors %}has-error{% endif %}">
-          <label for="{{form.email.auto_id}}" class="control-label">{{form.email.label}}</label>
-          <input id="{{form.email.auto_id}}" name="{{form.email.name}}" class='form-control input-lg' autofocus tabindex=1 value ="{{form.email.value | default_if_none:""}}"/>
-          {% for error in form.email.errors %}
-            <span class="error-block">{{error}}</span>
-          {% endfor %}
-        </div>
-        <div class="form-group {% if form.password.errors %}has-error{% endif %}">
-          <label for="{{form.password.auto_id}}" class="control-label">{{form.password.label}}</label>
-          <input type="password" id="{{form.password.auto_id}}" name="{{form.password.name}}" class='form-control input-lg' tabindex=2/>
-          {% for error in form.password.errors %}
-            <span class="error-block">{{error}}</span>
-          {% endfor %}
-        </div>
-        <div class="form-group {% if form.password_confirm.errors %}has-error{% endif %}">
-          <label for="{{form.password_confirm.auto_id}}" class="control-label">{{form.password_confirm.label}}</label>
-          <input type="password" id="{{form.password_confirm.auto_id}}" name="{{form.password_confirm.name}}" class='form-control input-lg' tabindex=3/>
-          {% for error in form.password_confirm.errors %}
-            <span class="error-block">{{error}}</span>
-          {% endfor %}
-        </div>
-        <button class="btn btn-primary" tabindex=4>{% trans 'Register' %}</button>
-        <a class="btn btn-default pull-right" href="{% url 'user_login' %}">{% trans 'Log In' %}</a>
-    </form>
+  <div class='row'>
+    <br />
+    <br />
+    <div class='col-lg-4 col-lg-offset-4'>
+      <form method="post">
+          {% csrf_token %}
+          <div class="form-group {% if form.email.errors %}has-error{% endif %}">
+            <label for="{{form.email.auto_id}}" class="control-label">{{form.email.label}}</label>
+            <input id="{{form.email.auto_id}}" name="{{form.email.name}}" class='form-control' autofocus tabindex=1 value ="{{form.email.value | default_if_none:""}}"/>
+            {% for error in form.email.errors %}
+              <span class="error-block">{{error}}</span>
+            {% endfor %}
+          </div>
+          <div class="form-group {% if form.password.errors %}has-error{% endif %}">
+            <label for="{{form.password.auto_id}}" class="control-label">{{form.password.label}}</label>
+            <input type="password" id="{{form.password.auto_id}}" name="{{form.password.name}}" class='form-control' tabindex=2/>
+            {% for error in form.password.errors %}
+              <span class="error-block">{{error}}</span>
+            {% endfor %}
+          </div>
+          <div class="form-group {% if form.password_confirm.errors %}has-error{% endif %}">
+            <label for="{{form.password_confirm.auto_id}}" class="control-label">{{form.password_confirm.label}}</label>
+            <input type="password" id="{{form.password_confirm.auto_id}}" name="{{form.password_confirm.name}}" class='form-control' tabindex=3/>
+            {% for error in form.password_confirm.errors %}
+              <span class="error-block">{{error}}</span>
+            {% endfor %}
+          </div>
+          <hr />
+          <button class="btn btn-block btn-primary" tabindex=4>{% trans 'Register' %}</button>
+      </form>
+    </br>
+    </br>
+    </br>
+    <p>
+      Already have an account? <a class="" href="{% url 'user_login' %}">
+      {% trans 'Click here to log in' %} &rsaquo;</a>
+    </p>
+    </div>
+  </div>
 </div>
 {% endblock %}
