Improve unsubscribe pages layout.

--- a/subscriber_management/templates/subscriber_unsubscribe_success.html
+++ b/subscriber_management/templates/subscriber_unsubscribe_success.html
@@ -5,7 +5,15 @@
 {% endblock %}
 
 {% block content %}
-<div class='container'>
-  <p class="alert alert-success" role="alert">{% trans 'You have successfully unsubscribed from' %} {{list.name}}</p>
-</div>
+  <br />
+  <br />
+  <br />
+  <br />
+  <div class='container'>
+    <div class='row'>
+      <div class='col-lg-6 col-lg-offset-3'>
+        <p class="alert alert-success" role="alert">{% trans 'You have successfully unsubscribed from' %} {{list.name}}</p>
+      </div>
+    </div>
+  </div>
 {% endblock %}
