--- a/subscriber_management/templates/subscriber_unsubscribe.html
+++ b/subscriber_management/templates/subscriber_unsubscribe.html
@@ -5,10 +5,20 @@
 {% endblock %}
 
 {% block content %}
-<div class='container'>
-<h1>{% trans 'Are you sure that you want to unsubscribe from' %} {{list.name}}?</h1>
-<form method="POST">
-  <button class="btn btn-primary">{% trans 'Unsubscribe' %}</button>
-</form>
-</div>
+  <br />
+  <br />
+  <br />
+  <br />
+  <div class='container'>
+    <div class='row'>
+      <div class='col-lg-6 col-lg-offset-3'>
+        <div class='well'>
+          <p>{% trans 'Are you sure that you want to unsubscribe from' %} {{list.name}}?</p>
+          <form method="post">
+            <button class="btn btn-primary">{% trans 'Yes, unsubscribe me' %}</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
