Optimize import subscribers.

--- a/subscriber_management/templates/import.html
+++ b/subscriber_management/templates/import.html
@@ -7,17 +7,18 @@
         {% csrf_token %}
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">Import csv file from mailchim {{list_item.name}}</h4>
+          <h4 class="modal-title">{% trans 'Import Subscribers from Mailchimp CSV' %}</h4>
         </div>
         <div class="modal-body">
           <div class="form-group">
-            <label for="file_import" class="control-label">{% trans 'CSV file' %}</label>
+            <small class='help-block'>See <a href='https://www.quora.com/Can-you-export-your-subscribers-from-MailChimp/answer/Lorenzo-Orlando-Caum' target='_blank'>here</a> for how to export your subscriber list from Mailchimp.</small>
+            <label for="file_import" class="control-label">{% trans 'CSV file' %}:</label>
             <input id="file_import" name="csv_file" type="file" tabindex='0' />
           </div>
         </div>
         <div class="modal-footer">
           <a href='javascript:void(0)' type="button" class="btn btn-default" data-dismiss="modal">{% trans 'Cancel' %}</a>
-          <button type="submit" class="btn btn-primary">{% trans 'Import' %}</button>
+          <button type="submit" class="btn btn-primary">{% trans 'Import Subscribers' %}</button>
         </div>
       </form>
     </div><!-- /.modal-content -->
@@ -31,17 +32,18 @@
         {% csrf_token %}
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">Import text {{list_item.name}}</h4>
+          <h4 class="modal-title">Import Subscribers</h4>
         </div>
         <div class="modal-body">
           <div class="form-group">
-            <label for="text_import" class="control-label">{% trans 'Import' %}</label>
+            <label for="text_import" class="control-label">{% trans 'Paste or write your subscribers info, one per line' %}:</label>
+            <small class='help-block'>Maximum 100 subscribers</small>
             <textarea id="text_import" class='form-control'  rows=10 name="text_import" tabindex='0' placeholder="john.doe@email.com,John Doe"></textarea>
           </div>
         </div>
         <div class="modal-footer">
           <a href='javascript:void(0)' type="button" class="btn btn-default" data-dismiss="modal">{% trans 'Cancel' %}</a>
-          <button type="submit" class="btn btn-primary">{% trans 'Import' %}</button>
+          <button type="submit" class="btn btn-primary">{% trans 'Import Subscribers' %}</button>
         </div>
       </form>
     </div><!-- /.modal-content -->
