--- a/subscriber_management/templates/parts/list_header.html
+++ b/subscriber_management/templates/parts/list_header.html
@@ -4,7 +4,7 @@
 <legend>
   {{ list_item.name }} subscribers
     <div class="btn-group pull-right">
-        <button type="button" class="btn btn-primary btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Import subscribers <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
