--- a/user_management/templates/user_management/user_register.html
+++ b/user_management/templates/user_management/user_register.html
@@ -9,23 +9,30 @@
     <div class='col-lg-4 col-lg-offset-4'>
       <form method="post">
           {% csrf_token %}
+          <div class="form-group {% if form.full_name.errors %}has-error{% endif %}">
+            <label for="{{form.full_name.auto_id}}" class="control-label">{{form.full_name.label}}</label>
+            <input id="{{form.full_name.auto_id}}" name="{{form.full_name.name}}" class='form-control' autofocus tabindex=1 value ="{{form.full_name.value | default_if_none:""}}"/>
+            {% for error in form.full_name.errors %}
+              <span class="error-block">{{error}}</span>
+            {% endfor %}
+          </div>
           <div class="form-group {% if form.email.errors %}has-error{% endif %}">
             <label for="{{form.email.auto_id}}" class="control-label">{{form.email.label}}</label>
-            <input id="{{form.email.auto_id}}" name="{{form.email.name}}" class='form-control' autofocus tabindex=1 value ="{{form.email.value | default_if_none:""}}"/>
+            <input id="{{form.email.auto_id}}" name="{{form.email.name}}" class='form-control' autofocus tabindex=2 value ="{{form.email.value | default_if_none:""}}"/>
             {% for error in form.email.errors %}
               <span class="error-block">{{error}}</span>
             {% endfor %}
           </div>
           <div class="form-group {% if form.password.errors %}has-error{% endif %}">
             <label for="{{form.password.auto_id}}" class="control-label">{{form.password.label}}</label>
-            <input type="password" id="{{form.password.auto_id}}" name="{{form.password.name}}" class='form-control' tabindex=2/>
+            <input type="password" id="{{form.password.auto_id}}" name="{{form.password.name}}" class='form-control' tabindex=3/>
             {% for error in form.password.errors %}
               <span class="error-block">{{error}}</span>
             {% endfor %}
           </div>
           <div class="form-group {% if form.password_confirm.errors %}has-error{% endif %}">
             <label for="{{form.password_confirm.auto_id}}" class="control-label">{{form.password_confirm.label}}</label>
-            <input type="password" id="{{form.password_confirm.auto_id}}" name="{{form.password_confirm.name}}" class='form-control' tabindex=3/>
+            <input type="password" id="{{form.password_confirm.auto_id}}" name="{{form.password_confirm.name}}" class='form-control' tabindex=4/>
             {% for error in form.password_confirm.errors %}
               <span class="error-block">{{error}}</span>
             {% endfor %}
