--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -22,7 +22,7 @@
         <li><a href="/me"></a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            <img src="https://www.gravatar.com/avatar/{{user.md5_hash_email}}?s=30"
+            <img src="//www.gravatar.com/avatar/{{user.md5_hash_email}}?s=30"
                  width='30' height='30'
                  id="gravatar_picture" class="img-circle special-img"
                  style="float:left; margin-right: 5px; margin-top:-5px" />
