--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -33,7 +33,7 @@
             <li><a href="{% url 'user_account' %}">{% trans "Account" %}</a></li>
 <!--             <li><a href="#">{% trans "Settings" %}</a></li> -->
             <li role="separator" class="divider"></li>
-            <li><a href="/accounts/logout">{% trans "Log Out" %}</a></li>
+            <li><a href="{% url 'user_logout' %}">{% trans "Log Out" %}</a></li>
           </ul>
         </li>
       </ul>
