--- a/user_management/templates/user_management/user_update.html
+++ b/user_management/templates/user_management/user_update.html
@@ -12,18 +12,44 @@
       <form method="post">
         <legend>Account</legend>
         {% csrf_token %}
-        {% for input in form_user %}
-        <div class="form-group">
-          <label for="email">{{input.label}}</label>
-          {{input}}
+        <div class="form-group {% if form_user.full_name.errors %}has-error{% endif %}">
+          <label for="{{form_user.full_name.auto_id}}" class="control-label">{{form_user.full_name.label}}</label>
+          <input id="{{form_user.full_name.auto_id}}" name="{form_user.full_name.name}}" class='form-control' autofocus tabindex=1 value ="{{form_user.full_name.value | default_if_none:""}}"/>
+          {% for error in form_user.full_name.errors %}
+            <span class="error-block">{{error}}</span>
+          {% endfor %}
         </div>
-        {% endfor %}
-        {% for input in form_user_extend %}
-        <div class="form-group">
-          <label for="email">{{input.label}}</label>
-          {{input}}
+        <div class="form-group {% if form_user.email.errors %}has-error{% endif %}">
+          <label for="{{form_user.email.auto_id}}" class="control-label">{{form_user.email.label}}</label>
+          <input id="" name="" class='form-control' autofocus tabindex=2 value ="{{form_user.email.value}}" readonly="true"/>
         </div>
-        {% endfor %}
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <hr>
+      <form method="post" action="{% url 'user_change_password' %}">
+        <legend>Change password</legend>
+        {% csrf_token %}
+        <div class="form-group {% if form_password.old_password.errors %}has-error{% endif %}">
+          <label for="{{form_password.old_password.auto_id}}" class="control-label">{{form_password.old_password.label}}</label>
+          <input type="password" id="{{form_password.old_password.auto_id}}" name="{{form_password.old_password.name}}" class='form-control' autofocus tabindex=3 value =""/>
+          {% for error in form_password.old_password.errors %}
+            <span class="error-block">{{error}}</span>
+          {% endfor %}
+        </div>
+        <div class="form-group {% if form_password.password1.errors %}has-error{% endif %}">
+          <label for="{{form_password.password1.auto_id}}" class="control-label">{{form_password.password1.label}}</label>
+          <input type="password" id="{{form_password.password1.auto_id}}" name="{{form_password.password1.name}}" class='form-control' autofocus tabindex=4 value =""/>
+          {% for error in form_password.password1.errors %}
+            <span class="error-block">{{error}}</span>
+          {% endfor %}
+        </div>
+        <div class="form-group {% if form_password.password2.errors %}has-error{% endif %}">
+          <label for="{{form_password.password2.auto_id}}" class="control-label">{{form_password.password2.label}}</label>
+          <input type="password" id="{{form_password.password2.auto_id}}" name="{{form_password.password2.name}}" class='form-control' autofocus tabindex=5 value =""/>
+          {% for error in form_password.password2.errors %}
+            <span class="error-block">{{error}}</span>
+          {% endfor %}
+        </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
     </div>
