Add passworf forgotten and password recovery.

--- a/user_management/templates/user_management/user_login.html
+++ b/user_management/templates/user_management/user_login.html
@@ -33,6 +33,13 @@
       Don’t have an account yet? <a class="" href="{% url 'user_register' %}">
       {% trans 'Click here to register' %} &rsaquo;</a>
     </p>
+    </br>
+    </br>
+    <p>
+      Forgotten your password? <a class="" href="{% url 'user_forgotten' %}">
+      {% trans 'Click here to recover it' %} &rsaquo;</a>
+    </p>
+
     </div>
   </div>
 </div>
